--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,12 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
+remappings = [
+    "@Oppenzelline/upgradables/contracts=lib/openzeppelin-contracts-upgradeable/contracts/",
+    "@Oppenzeppelin/contracts=lib/openzeppelin-contracts/contracts/",
+]
+fs_permissions = [
+    { access = "read", path = "./broadcast" },
+    { access = "read", path = "./reports" },
+]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
